--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Survival</title>
-  <link rel="icon" type="image/png" href="assets/fire_sprite_sheet.png" />
+  <link rel="icon" type="image/png" href="assets/favicon.png" />
   <style>
     * {
       margin: 0;
